SERVER-47267 Don't log awaitable isMaster as slow query